# harness-bench-fast

./: .gitignore  Dockerfile  LEGACY_RESULTS.md  README.md  RUN_GUIDE.md  docker-compose.yml  pyproject.toml
containerized/: README.md  build_harness_image.sh  containerized_harness_common.py  run_containerized_hermes_benchmark.py  run_containerized_openclaw_benchmark.py  run_containerized_opencode_benchmark.py  run_containerized_pi_benchmark.py
containerized/docker/: Dockerfile.hermes  Dockerfile.openclaw  Dockerfile.opencode  Dockerfile.pi
docs/: index.html  styles.css
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
harness_bench/: __main__.py  core.py  runner.py  runner_cli.py  runner_openrouter.py  runner_pure.py  tasks_agentic.py  tasks_diagnostic.py  tasks_extreme.py  verifiers.py  versioning.py
harness_bench/runs/: codex_gpt55_20260609_full313.json  codex_gpt55_failed_tasks_rerun_20260609.json
scripts/: cli_test_runner.py  run_harness_benchmark.py  run_opencode_benchmark.py
tests/: test_runner_policy.py  test_web_microbench.py
web/: __init__.py  main.py
web/api/: deps.py  ws.py
web/api/routers/: __init__.py  benchmarks.py  runs.py
web/db/: __init__.py  crud.py  database.py  models.py
web/engine/: __init__.py  orchestrator.py  orchestrator_microbench.py  patch_microbench.py
web/schemas/: __init__.py  benchmarks.py  runs.py
